refactor: Cleanup dependencies and standardize phase models
- GameNotifier, BukkitSenderNotifier 등 리스너 체제로 인해 불필요해진 인터페이스 제거
- TaskScheduler를 GameTaskManager 구조로 개편하며 모델 추상화 고도화
- Board, Team, Piece 모듈의 Service 의존성 제거 및 폴더 구조(policy, identity 등) 정리